--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -1,8 +1,9 @@
 .layout-wrapper {
   background-color: #F7FAFC;
   &__content {
-    width: calc(100vw - 400px);
+    width: calc(100vw - 430px);
     margin-left: 5rem;
+    border: 1px solid black;
   }
 }
 
