--- a/src/app/shared/components/home-item-card/home-item-card.component.html
+++ b/src/app/shared/components/home-item-card/home-item-card.component.html
@@ -3,7 +3,7 @@
     <img ngSrc="https://s3-alpha-sig.figma.com/img/fd41/b9fe/7e544a23b42f51fe642e52a05a65f499?Expires=1725840000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l08Tn5~K~UlqSyhAnpNldEKn6F1ZlWrIB9SfELaFfeeL5C2pN8j5PxSG6h3PK8OX1fMKoYzL9KdbC4b7-Zydz9dDs68yze3aAhLbO8vUQN-g-IFKM3oBvU-ovG6oGXhVq9KEh5VoARJMNmctGccYmnOxfqLtG6eFl7rovI69je39NUzojsxTp9GIfWV~zv6a5~CMqjw7iqX~71ZI8WIol1g5IW2YSrUoP~~u~ou2cVO-qsH6EVPb0OqZoU9W0z4GDgOE6J6zxL90cgPn3Ku9BMXj~rRu3MMQLo4TIvEg0w~qROSvV7e7B2~TzlGlC~tpNzKacHn2AHxmp2FWdAnGYQ__"
          priority alt="category-img" width="200" height="100" class="w-full border-round-top"/>
     <span class="item-card_footer flex justify-content-between align-items-center gap-3 px-3 pb-2">
-          <span>Apple</span>
+          <span class="item-card_name">Apple</span>
           <p-button [raised]="true" [text]="true" icon="pi pi-plus"
                     styleClass="border-none p-0 shadow-none text-sm item-card_add-btn" (onClick)="addItemToList(item)"/>
         </span>
