--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -3,7 +3,8 @@
   &__content {
     width: calc(100vw - 430px);
     margin-left: 5rem;
-    border: 1px solid black;
+  }
+  &__side-shopping-list {
   }
 }
 
