--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,12 +1,18 @@
 :root {
   --text-color-green: #355259; // previously --primary-color
   --highlight-color: #e1b630; // previously --secondary-color
-  --bg-color: #f9f9f7; // previously --background-color
+  //--bg-color: #f9f9f7; // previously --background-color
   --alert-color: #cf554a; // previously --error-color
-  --subtle-color: #97aebc; // previously --details-color
   --soft-accent-color: #f0aaa7; // previously --accent-color
-  --light-blue: #cfe6e7; // remained the same as it is specific
+  //--light-blue: #cfe6e7; // remained the same as it is specific
   --mint-green-bg: #d1e8e2;
+  //----------
+  --light-blue: #add8ed;
+  --light-pink: #eba3a9;
+  --mint-green: #83c499;
+  --text-blue: #2C3973;
+  --bg-color: #FAF8F6;
+  --subtle-color: #97aebc;
 
 }
 
