--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -5,7 +5,7 @@
   <div class="layout-wrapper__content min-h-screen h-full">
     <router-outlet/>
   </div>
-  <div class="layout-wrapper__side-shopping-list w-22rem h-screen fixed top-0 bottom-0 right-0 py-2 px-3">
+  <div class="layout-wrapper__side-shopping-list w-22rem h-screen shadow-1 fixed top-0 bottom-0 right-0 py-2 px-3">
     <app-shopping-list/>
   </div>
 </div>
