--- a/src/app/shared/components/home-item-card/home-item-card.component.scss
+++ b/src/app/shared/components/home-item-card/home-item-card.component.scss
@@ -2,6 +2,10 @@
   &_name {
     color: var(--text-blue);
   }
+  img {
+    max-width: 150px;
+    min-width: 150px;
+  }
   ::ng-deep {
 
     .item-card_add-btn {
