--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -2,10 +2,12 @@
   <div class="layout-wrapper__side-menu h-screen w-5rem fixed top-0 bottom-0 left-0">
     <app-side-navigation/>
   </div>
-  <div class="layout-wrapper__content min-h-screen h-full">
+  <div class="layout-wrapper__content {{currentOpenShoppingList()?.id ? 'with-list-open' : ''}} min-h-screen h-full">
     <router-outlet/>
   </div>
-  <div class="layout-wrapper__side-shopping-list w-22rem h-screen shadow-1 fixed top-0 bottom-0 right-0 py-2 px-3">
-    <app-shopping-list/>
-  </div>
+  @if (currentOpenShoppingList()?.id; as list) {
+    <div class="layout-wrapper__side-shopping-list w-22rem h-screen shadow-1 fixed top-0 bottom-0 right-0 py-2 px-3">
+      <app-shopping-list/>
+    </div>
+  }
 </div>
