add history page integration and UI

--- a/src/app/shared/components/side-navigation/side-navigation.component.html
+++ b/src/app/shared/components/side-navigation/side-navigation.component.html
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li [class.active]="activeRoute().includes('history')" >
-          <a class="p-link flex flex-column gap-2 align-items-center justify-content-center text-sm no-underline" [routerLink]="'stats'">
+          <a class="p-link flex flex-column gap-2 align-items-center justify-content-center text-sm no-underline" [routerLink]="'history'">
             <i class="pi pi-history"></i>
             <span>History</span>
           </a>
