add new category form api and functionality

--- a/src/app/pages/admin/system-items-categories-list/system-items-categories-list.component.html
+++ b/src/app/pages/admin/system-items-categories-list/system-items-categories-list.component.html
@@ -9,7 +9,7 @@
       <app-items-list-table/>
 
     } @else if (activeTabIndex() === 1) {
-      <app-categories-list-table/>
+      <app-categories-list-table />
     }
   </div>
 </div>
