--- a/src/app/shared/components/categories-list-table/categories-list-table.component.html
+++ b/src/app/shared/components/categories-list-table/categories-list-table.component.html
@@ -1,8 +1,13 @@
-  <p-table [columns]="columns()" [value]="categoriesList() ?? []" [tableStyle]="{ 'min-width': '50rem' }">
+<div class="flex flex-column align-items-end mb-4">
+  <p-button  icon="pi pi-plus" label="Add new category"
+             styleClass="text-sm" (onClick)="addNewCategory()"/>
+</div>
+@if (categoriesList()(); as categories) {
+  <p-table [columns]="columns()" [value]="categories" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header" let-columns="columns">
       <tr>
-       <th>Category Name</th>
-       <th>Created Date</th>
+        <th>Category Name</th>
+        <th>Created Date</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-item let-columns="columns">
@@ -10,14 +15,15 @@
         @for(col of columns; track col.name) {
           <td>
 
-         @if(col.name === 'Created Time') {
-             {{ item[col.value] | date:"dd MMM yyyy"}}
-         } @else {
-           {{ item[col.value]}}
-         }
+            @if(col.name === 'Created Time') {
+              {{ item[col.value] | date:"dd MMM yyyy"}}
+            } @else {
+              {{ item[col.value]}}
+            }
           </td>
 
         }
       </tr>
     </ng-template>
   </p-table>
+}
